test/errors/offsets_error/zs/varint_error.zs
package varint_error;

struct VarintError
{
    varint offset;
offset:
    uint32 values[];
};
